--- a/src/Authentication/login/login.css
+++ b/src/Authentication/login/login.css
@@ -5,7 +5,9 @@
   margin: 0;
   color: #f8f8f8;
 }
-
+header a{
+  text-decoration: none;
+}
 body {
   background-color: #0C0C0F;
   overflow-x: hidden;
