--- a/src/Authentication/set password/setpass.css
+++ b/src/Authentication/set password/setpass.css
@@ -12,7 +12,7 @@
   #eyecloseimg2{
     position:relative;
     width:24px;
-    top:-50px;
+    top:-6.5vh;
     margin-left: 27.63vw;
     color:grey;
     height:20px;
