--- a/src/Warehouse/view.css
+++ b/src/Warehouse/view.css
@@ -88,6 +88,16 @@ top:5vh;
   padding-left: 1.25vw;
   background-color: #0C0C0F;
 }
+#inputArr3{
+  font-size: 1vw;
+  height: 3.33vw;
+  width: 55vw;
+  border-radius: 0.5vw;
+  border: 1px solid #f8f8f8;
+  border-color: aliceblue;
+  padding-left: 1.25vw;
+  background-color: #0C0C0F;
+}
 #createinp{
   position: absolute;
   left:270px;
