distance between two warehouse

--- a/src/Layout/Business/Items/Items.css
+++ b/src/Layout/Business/Items/Items.css
@@ -19,7 +19,16 @@ top:4vh;
   }
   #groupsdiv2{
     background-color: #512da890;
-  
+    width:54.8vw;
+    position:absolute;
+    top:200px;
+    left:270px;
+    padding:20px;
+    z-index:2;
+  }
+
+  #groupsdiv3{
+    background-color: #512da890;
     width:54.8vw;
     position:absolute;
     top:200px;
